argocd/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: webapp
  labels:
    app: webapp-svc
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    protocol: TCP
  selector:
    app: webapp-sql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
  labels:
    app: webapp-sql
    tier: frontend
spec:
  selector:
    matchLabels:
      app: webapp-sql
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp-sql
        tier: frontend
    spec:
      containers:
      - name: webapp1
        image: sens31/ehospital
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  rules:
  - host: "webapp.kube-demo-1.clcreative.home"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc 
            port:
              number: 80
  tls:
  - hosts:
    - webapp.k8s.ehospital.home
    secretName: webapp-tls-secret
